tests/files/flow_controller_tests/should_run/095.cmdr
x = 0;
print arctan(x);