tests/files/flow_controller_tests/should_fail/083.cmdr
x = "cat";
print arctan(x);